staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-staging-service
  namespace: staging
spec:
  selector:
    app: springboot
    env: staging
  ports:
  - port: 8080  # External port exposed by the service
    targetPort: 8080
