staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress
  namespace: staging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /stagingapp
        pathType: Prefix
        backend:
          service:
            name: springboot-staging-service  # Replace with your actual service name
            port:
              number: 8080  # Update to the desired port
